--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,13 +2,13 @@
 <div class="header-top">
 
 	<div class="logo-header">
-		<%= link_to(image_tag('LogoLCI.png'), root_path) %>
+		<%= link_to(image_tag('LogoIDA400.png'), root_path) %>
 	</div>
 
 	<div class="flag-container">
-		<%= link_to(image_tag('CanFlag.jpg'),       'http://www.collegelasalle.com/' ) %>
+	<!-- 	<%= link_to(image_tag('CanFlag.jpg'),       'http://www.collegelasalle.com/' ) %>
 		<%= link_to(image_tag('ColFlag.jpg'),       'http://www.lci.edu.co/' ) %>
-<!-- 		<%= link_to(image_tag('PanamaFlag.jpg'),    'http://www.lcipanamacity.com/' ) %>
+		<%= link_to(image_tag('PanamaFlag.jpg'),    'http://www.lcipanamacity.com/' ) %>
 		<%= link_to(image_tag('MexFlag.jpg'),       'http://www.lcimonterrey.com.mx/' ) %>
 		<%= link_to(image_tag('SpainFlag.jpg'),     'http://fdmoda.com/' ) %>
 		<%= link_to(image_tag('TurkeyFlag.jpg'),    'http://www.lasalle.com.tr/' ) %>
