--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -11,7 +11,7 @@
 
 #dropdown ul li:hover ul li {
 	display: block;
-	background-color: #483a00;
+	background-color: #1f4d96;
 	padding: 10px 10px 10px 10px;
 	margin-left: 155px;
 
@@ -40,7 +40,7 @@
 	width: 940px;
 	margin: 10px;
 /*	border: 2px solid #cecece;*/
-	background-color: #483a00;
+	background-color: #1f4d96;
 	overflow: auto;
 	width: 100%;
 }
